# Rai

./: .env.example  .gitignore  AGENTS.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
analytics-service/: pyproject.toml
analytics-service/app/: __init__.py  forecasting.py  main.py  models.py
analytics-service/tests/: test_forecasting.py
api/rai/: chat.ts
docs/agent-os/: README.md  agent-roster.md  rai-agent-crews.md  rai-product-implications.md  workflows.md
docs/ai/: rai-ai-intent-and-tool-contracts.md
docs/architecture/: external-rxledger-api-contract.md  rai-analytics-service.md  rai-chat-backend.md  rai-security-hardening.md
docs/delivery/: rai-agent-execution-log.md  rai-sprint-0-and-1-plan.md
docs/deployment/: vercel-neon-setup.md
docs/product/: rai-beta-intelligence-spec.md  rai-mvp-blueprint.md
e2e/: unique-patients.spec.ts
server/: env.test.ts  env.ts  index.ts  raiAnalyticsServiceClient.test.ts  raiAnalyticsServiceClient.ts  raiChatService.test.ts  raiChatService.ts  raiGeminiOrchestration.test.ts  raiGeminiOrchestration.ts  raiHttp.test.ts  raiHttp.ts  raiOpenAiOrchestration.test.ts  raiOrchestrationGraph.test.ts  raiOrchestrationGraph.ts  raiPersistence.ts  raiToolRegistry.test.ts  raiToolRegistry.ts  rateLimit.test.ts  rateLimit.ts  requestValidation.test.ts  requestValidation.ts  rxledgerApiConnector.test.ts  rxledgerApiConnector.ts  viteRaiApiPlugin.ts
src/: App.test.tsx  App.tsx  styles.css
src/components/: LandingPage.tsx
src/lib/: analyticsEngine.test.ts  analyticsEngine.ts  (+14 more)
