[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "rai-analytics-service"
version = "0.1.0"
description = "Deterministic numerical analytics for Rai"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "numpy>=2.1,<3",
  "pandas>=2.2,<4",
  "pydantic>=2.10,<3",
  "uvicorn[standard]>=0.34,<1"
]

[project.optional-dependencies]
test = ["httpx>=0.28,<1", "pytest>=8.3,<10"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
